--- a/src/App.scss
+++ b/src/App.scss
@@ -54,6 +54,9 @@ nav {
 		width: 25px;
 		margin-right: 6px;
 	}
+	.navbar-nav {
+		align-items: center;
+	}
 	.nav-link {
 		color: #000000 !important;
 		font-size: 0.95em;
@@ -88,6 +91,26 @@ nav {
 		background-color: #000000;
 		color: #ffffff !important;
 		font-weight: bold;
+	}
+	.avatar {
+		overflow: hidden;
+		border-radius: 100px;
+	}
+	.avatar-s {
+		width: 40px;
+		height: 40px;
+	}
+	.avatar img {
+		width: 100%;
+		height: auto;
+	}
+	.nav-col.right .logged-user .nav-link {
+		display: flex;
+		align-items: center;
+		padding: 0 !important;
+	}
+	.logged-user .avatar {
+		margin-right: 8px;
 	}
 }
 
