--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,40 @@
 /*---GLOBAL STYLES---*/
 
+.mw-1600 {
+	max-width: 1600px;
+}
+
+.avatar {
+	border-radius: 100px;
+	margin-right: 12px;
+	overflow: hidden;
+	position: relative;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	img {
+		width: 100%;
+		height: auto;
+	}
+	.dropCap {
+		position: absolute;
+		line-height: 40px;
+		color: #ffffff;
+		font-weight: bold;
+		font-size: 1.2em;
+	}
+}
+
+.avatar-nav {
+	width: 40px;
+	height: 40px;
+}
+
+.avatar-s {
+	width: 50px;
+	height: 50px;
+}
+
 h1,
 h2,
 h3,
@@ -87,30 +122,62 @@ nav {
 	.nav-col.right .navbar-nav:first-child {
 		padding: 0 50px;
 	}
-	.btn {
+	.btn.signup {
 		background-color: #000000;
 		color: #ffffff !important;
 		font-weight: bold;
 	}
-	.avatar {
-		overflow: hidden;
-		border-radius: 100px;
-	}
-	.avatar-s {
-		width: 40px;
-		height: 40px;
-	}
-	.avatar img {
-		width: 100%;
-		height: auto;
-	}
+
 	.nav-col.right .logged-user .nav-link {
 		display: flex;
 		align-items: center;
-		padding: 0 !important;
+		padding: 0;
 	}
 	.logged-user .avatar {
 		margin-right: 8px;
+	}
+	.logged-user .dropdown .dropdown-toggle {
+		display: flex;
+		align-items: center;
+	}
+	.logged-user .dropdown .dropdown-toggle:after {
+		content: none;
+	}
+	.logged-user .dropdown-menu {
+		padding: 0;
+		right: 0;
+		left: auto;
+		width: 280px;
+	}
+	.logged-user svg {
+		width: 20px;
+		height: 20px;
+		margin: 0;
+	}
+	.logged-user ul {
+		list-style: none;
+		margin: 0;
+		padding: 0;
+	}
+	.logged-user ul li {
+		margin: 6px 10px;
+	}
+	.logged-user ul li:first-child {
+		margin-top: 10px;
+	}
+	.logged-user ul li:last-child {
+		margin-bottom: 10px;
+	}
+	.logged-user ul li a {
+		padding: 10px 15px !important;
+		display: block !important;
+	}
+	.logged-user ul li a:hover {
+		background-color: lightblue;
+		border-radius: 8px;
+	}
+	.logged-user ul li a svg {
+		margin-right: 10px;
 	}
 }
 
@@ -326,3 +393,60 @@ nav {
 }
 
 /*---SIGNUP STYLES---*/
+/*---FEED STYLES---*/
+
+#feed .box {
+	padding: 50px 0;
+	.user-meta-wrapper {
+		display: flex;
+		align-items: center;
+		p {
+			margin-bottom: 0;
+		}
+		h1 {
+			font-size: 1.4em;
+			margin-bottom: 0;
+		}
+		.dropCap {
+			font-size: 1.6em;
+		}
+	}
+	.left-menu {
+		.topics,
+		.links,
+		.content {
+			padding: 15px 0;
+		}
+		p {
+			margin: 0 0 5px 0;
+			font-size: 0.8em;
+			opacity: 0.7;
+		}
+		ul {
+			list-style: none;
+			margin: 0;
+			padding: 0;
+		}
+		li {
+			font-size: 1.2em;
+			font-weight: bold;
+			padding: 7px 0;
+		}
+		a {
+			display: flex;
+			align-items: center;
+			color: #000000;
+		}
+		svg {
+			margin-right: 6px;
+		}
+		.btn {
+			justify-content: center;
+			color: #ffffff;
+			padding: 12px 15px;
+			font-weight: bold;
+		}
+	}
+}
+
+/*---FEED STYLES---*/
