--- a/src/App.scss
+++ b/src/App.scss
@@ -21,13 +21,13 @@
 		line-height: 40px;
 		color: #ffffff;
 		font-weight: bold;
-		font-size: 1.2em;
+		font-size: 0.9em;
 	}
 }
 
 .avatar-nav {
-	width: 40px;
-	height: 40px;
+	width: 30px;
+	height: 30px;
 }
 
 .avatar-s {
@@ -397,6 +397,9 @@ nav {
 
 #feed .box {
 	padding: 50px 0;
+	.user-meta {
+		margin-bottom: 15px;
+	}
 	.user-meta-wrapper {
 		display: flex;
 		align-items: center;
