--- a/src/App.scss
+++ b/src/App.scss
@@ -933,3 +933,109 @@ nav {
 }
 
 /*---LISTING PAGE DETAILS---*/
+/*---USER PROFILE STYLES---*/
+
+#userProfile {
+	.box {
+		width: 100%;
+		padding: 50px 0;
+	}
+	.box .col.left,
+	.box .col.right {
+		max-width: 20% !important;
+	}
+	.box.bordered {
+		border: 1px solid #e8e8e8;
+		padding: 20px;
+		border-radius: 8px;
+	}
+	.user.box {
+		display: flex;
+		flex-direction: column;
+		align-items: flex-start;
+		.user-meta {
+			width: 100%;
+			svg {
+				margin-right: 6px;
+			}
+		}
+		.avatar.user-avatar {
+			width: 100px;
+			margin-bottom: 15px;
+		}
+		.user-fullName {
+			font-size: 2em;
+			margin-bottom: 0;
+		}
+		ul {
+			margin: 0;
+			padding: 0;
+			list-style: none;
+		}
+		ul li {
+			padding: 3px 0;
+		}
+		li span {
+			font-weight: bold;
+		}
+	}
+	.box .col.center {
+		flex: 1;
+		.filter-bar {
+			display: flex;
+			justify-content: space-between;
+			border-radius: 8px;
+			overflow: hidden;
+			button {
+				width: 100%;
+				padding: 10px 15px;
+				margin: 0 6px;
+				font-size: 1.2em;
+				font-weight: bold;
+			}
+			button:first-child {
+				margin-left: 0;
+			}
+			button:last-child {
+				margin-right: 0;
+			}
+			button.active {
+				background-color: lightblue;
+				border-radius: 8px;
+				cursor: pointer;
+			}
+			button:hover {
+				background-color: lightblue;
+				border-radius: 8px;
+				cursor: pointer;
+			}
+			button:focus {
+				box-shadow: none;
+			}
+			button svg {
+				margin-right: 8px;
+			}
+		}
+		.user-listings {
+			.title-area h2 {
+				font-family: "INTER";
+				font-size: 1.6em;
+				font-weight: bold;
+			}
+			.box.bordered {
+				padding: 10px 20px;
+				background: #e8e8e8;
+				margin-top: 20px;
+			}
+			.content.box {
+				margin: 20px 0;
+				border-radius: 8px;
+			}
+			.content.box:last-child {
+				margin-bottom: 0;
+			}
+		}
+	}
+}
+
+/*---END USER PROFILE STYLES---*/
