--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,23 @@
 /*---GLOBAL STYLES---*/
 
+$dark-text: #0d1f44;
+$soft-text: #abc3f4;
+$white-text: #ffffff;
+$red-text: #fd8281;
+$input-background: #eaf0fc;
+$input-placeholder: #173572;
+$input-text: #173572;
+$input-focus-border: #2e6ae4;
+$dark-button-background: #2e6ae4;
+$dark-button-border: #2e6ae4;
+$dark-button-color: #ffffff;
+$soft-button-background: #ffffff;
+$soft-button-border: #2e6ae4;
+$soft-button-color: #2e6ae4;
+$links-color: #2e6ae4;
+$active-tab-background: #5787e9;
+$hover-tab-background: #eaf0fc;
+
 .mw-1600 {
 	max-width: 1600px;
 }
@@ -42,6 +60,7 @@ h4,
 h5,
 h6 {
 	font-family: "MADE";
+	color: $dark-text;
 }
 
 p,
@@ -50,6 +69,7 @@ ul,
 ol,
 span {
 	font-family: "INTER";
+	color: $dark-text;
 }
 
 a,
@@ -58,6 +78,7 @@ a:visited,
 a:hover,
 a:active {
 	text-decoration: none !important;
+	color: $links-color;
 }
 
 .form-control,
@@ -69,8 +90,9 @@ button,
 .form-control:focus {
 	outline: none !important;
 	border: none !important;
-	box-shadow: none !important;
-	background-color: #f1f1f1ef !important;
+	background-color: $input-background !important;
+	box-shadow: inset 0 0 0 3px $input-focus-border !important;
+	border-radius: 8px;
 }
 
 form .form-label {
@@ -79,7 +101,11 @@ form .form-label {
 }
 form .form-control {
 	border: none;
-	background-color: #f1f1f1ef !important;
+	background-color: $input-background !important;
+	color: $input-text;
+}
+form .form-control::placeholder {
+	color: $input-placeholder;
 }
 
 form button {
@@ -98,6 +124,12 @@ form button {
 	font-weight: bold;
 	width: 100%;
 	margin-top: 20px;
+}
+
+.btn-primary {
+	background-color: $dark-button-background !important;
+	color: $dark-button-color !important;
+	font-weight: bold !important;
 }
 
 /*---GLOBAL STYLES---*/
@@ -121,7 +153,7 @@ nav {
 		align-items: center;
 	}
 	.nav-link {
-		color: #000000 !important;
+		color: $dark-text !important;
 		font-size: 0.95em;
 		padding-left: 0.85rem !important;
 		padding-right: 0.85rem !important;
@@ -134,7 +166,7 @@ nav {
 	}
 	.nav-col.left .navbar-nav {
 		align-items: center;
-		background-color: #f1f1f1ef;
+		background-color: $input-background;
 		padding-left: 10px;
 		border-radius: 7px;
 	}
@@ -143,16 +175,19 @@ nav {
 		width: 100%;
 	}
 	.nav-col.left .form-control {
-		background-color: #f1f1f1ef;
+		background-color: $input-background;
 		border: none;
 		padding-left: 5px;
+	}
+	.nav-col.left .form-control:focus {
+		box-shadow: none !important;
 	}
 	.nav-col.right .navbar-nav:first-child {
 		padding: 0 50px;
 	}
 	.btn.signup {
-		background-color: #000000;
-		color: #ffffff !important;
+		background-color: $dark-button-background;
+		color: $dark-button-color !important;
 		font-weight: bold;
 	}
 
@@ -201,7 +236,7 @@ nav {
 		display: block !important;
 	}
 	.logged-user ul li a:hover {
-		background-color: lightblue;
+		background-color: $input-background;
 		border-radius: 8px;
 	}
 	.logged-user ul li a svg {
@@ -426,8 +461,8 @@ nav {
 		margin-top: 30px;
 	}
 	.social-signup .btn.google {
-		background: #4285f4;
-		color: #ffffff;
+		background: $dark-button-background;
+		color: $dark-button-color;
 		font-weight: bold;
 		padding-left: 30px;
 		padding-right: 30px;
@@ -443,10 +478,11 @@ nav {
 	.social-signup .btn.facebook {
 		padding-left: 20px;
 		padding-right: 20px;
-		background-color: #ddd;
+		background-color: #eaf0fc;
 	}
 	.signup-col-wrapper.right p.sub-h1 {
 		font-size: 1.1em;
+		color: $dark-text;
 	}
 	form {
 		margin-top: 35px;
@@ -524,13 +560,13 @@ nav {
 		a {
 			display: flex;
 			align-items: center;
-			color: #000000;
+			color: $dark-text;
 		}
 		svg {
 			margin-right: 6px;
 		}
 		li:hover {
-			background-color: lightblue;
+			background-color: $input-background;
 			border-radius: 8px;
 			cursor: pointer;
 		}
@@ -653,12 +689,16 @@ nav {
 		margin-right: 6px;
 	}
 	.col.left .list-item.active {
-		background-color: lightblue;
+		//background-color: $active-tab-background;
 		border-radius: 8px;
 		cursor: pointer;
+		color: $dark-button-color;
+		svg {
+			stroke: $dark-button-color;
+		}
 	}
-	.col.left .list-item:hover {
-		background-color: lightblue;
+	.col.left .list-item:hover:not(.active) {
+		background-color: $input-background;
 		border-radius: 8px;
 		cursor: pointer;
 	}
@@ -725,7 +765,7 @@ nav {
 	background-color: #f1f1f1;
 	border-bottom: 1px solid #cfcfcf;
 	a {
-		color: #000000;
+		color: $dark-text;
 	}
 	.image,
 	.title,
@@ -799,14 +839,14 @@ nav {
 		padding: 10px 15px !important;
 		display: block !important;
 		align-items: center;
-		color: #000000;
+		color: $dark-text;
 		font-size: 0.95em;
 		text-align: left;
 		width: 100%;
 	}
 	.dropdown-menu ul li a:hover,
 	.dropdown-menu ul li button:hover {
-		background-color: lightblue;
+		background-color: $input-background;
 		border-radius: 8px;
 	}
 	.dropdown-menu ul li a svg,
@@ -957,11 +997,19 @@ nav {
 			width: 100%;
 			svg {
 				margin-right: 6px;
+				min-width: 18px;
+				min-height: 18px;
+			}
+			a {
+				margin-left: 4px;
+			}
+			.user-username svg {
+				margin-right: -4px !important;
 			}
 		}
 		.avatar.user-avatar {
 			width: 100px;
-			margin-bottom: 15px;
+			margin-bottom: 25px;
 		}
 		.user-fullName {
 			font-size: 2em;
@@ -1000,12 +1048,16 @@ nav {
 				margin-right: 0;
 			}
 			button.active {
-				background-color: lightblue;
+				background-color: $dark-button-background;
 				border-radius: 8px;
 				cursor: pointer;
+				color: $dark-button-color;
+				svg {
+					stroke: $dark-button-color;
+				}
 			}
-			button:hover {
-				background-color: lightblue;
+			button:hover:not(.active) {
+				background-color: $input-background;
 				border-radius: 8px;
 				cursor: pointer;
 			}
