Implemented new funcs to the Dashboard

--- a/src/App.scss
+++ b/src/App.scss
@@ -136,11 +136,11 @@ form button {
 /*---HEADER STYLES---*/
 
 header {
-	box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2), 0 0 1px rgba(1, 0, 0, 0.2);
 	z-index: 1000;
 	position: sticky;
 	top: 0;
 	background-color: #ffffff;
+	border-bottom: 1px solid #e8e8e8;
 }
 
 nav {
@@ -783,8 +783,8 @@ nav {
 		justify-content: center;
 	}
 	.image img {
-		width: 30px;
-		height: 30px;
+		width: 40px;
+		height: 40px;
 		background-color: grey;
 		border-radius: 6px;
 		display: block;
@@ -799,6 +799,7 @@ nav {
 	}
 	.subtitle {
 		min-width: 375px;
+		max-width: 375px;
 	}
 	.date {
 		width: 187.5px;
@@ -918,7 +919,12 @@ nav {
 		height: 130px;
 		margin-right: 20px;
 		background: grey;
-		border-radius: 6px;
+		border-radius: 8px;
+		overflow: hidden;
+	}
+	.listing-cover img {
+		width: 230px;
+		height: auto;
 	}
 	.listing-content {
 		.listing-title {
@@ -948,30 +954,114 @@ nav {
 /*---LISTING PAGE DETAILS---*/
 
 #listingPage {
-	.listing-wrapper {
+	.box {
 		margin: 0 auto;
 		padding: 50px 0;
 	}
-	.listing-title {
-		font-family: "INTER";
-		font-weight: bold;
-		font-size: 2.2em;
-	}
-	.listing-subtitle {
-		font-size: 1.25em;
-		max-width: 600px;
-		opacity: 0.8;
-	}
-	.col.left {
-		padding-left: 0;
-		width: 50%;
-		.listing-description {
-			font-size: 1em;
-			line-height: 1.7em;
+	.listing-cover {
+		margin: -5px;
+		.cover {
+			height: 340px;
+			background-size: cover;
+			background-position: center center;
+			border-radius: 8px;
+			margin: 5px;
+		}
+		.cover:nth-child(1) {
+			width: 30%;
+		}
+		.cover:nth-child(2) {
+			width: 30%;
+		}
+		.cover:nth-child(3) {
+			width: 30%;
+		}
+		.d-flex {
+			flex: 1;
+			flex-direction: column;
+			.cover {
+				height: 100%;
+				width: auto;
+			}
+		}
+		.cover:nth-child(4) {
+			width: 20%;
 		}
 	}
-	.col.right {
-		padding-right: 0;
+	.listing-title {
+		font-weight: bold;
+		font-size: 2.5em;
+		margin-bottom: 15px;
+	}
+	.listing-subtitle {
+		font-size: 1.1em;
+		max-width: 600px;
+	}
+	.listing-meta-wrapper {
+		.col.right,
+		.col.left {
+			padding: 0;
+		}
+		.col.left {
+			max-width: 20% !important;
+			margin: 0 !important;
+			p {
+				font-weight: bold;
+			}
+		}
+		.col.right {
+			max-width: 100% !important;
+		}
+	}
+	.listing-owner {
+		border-right: 1px solid #e8e8e8;
+		margin-right: 25px;
+		.avatar {
+			margin-bottom: 10px;
+			justify-content: flex-start;
+		}
+		.avatar img {
+			border-radius: 100px !important;
+			width: 60px;
+			height: 60px;
+		}
+		.listing-owner-name {
+			font-size: 0.92em;
+		}
+	}
+	.listing-location {
+		font-size: 0.92em;
+		opacity: 0.6;
+		svg {
+			margin-right: 6px;
+		}
+	}
+	.listing-body {
+		padding-top: 25px;
+	}
+	.listing-description {
+		font-size: 1.2em;
+		font-family: "INTER";
+	}
+	.listing-content {
+		padding-top: 30px;
+		.col.left {
+			max-width: 70%;
+			margin-right: 100px;
+			.listing-description {
+				font-size: 1em;
+				line-height: 1.7em;
+			}
+		}
+		.col.right {
+			max-width: 30%;
+			.listing-details-box {
+				border: 1px solid #e8e8e8;
+				width: 100%;
+				height: 200px;
+				border-radius: 8px;
+			}
+		}
 	}
 }
 
@@ -1119,6 +1209,7 @@ nav {
 	.col.right {
 		.box.wrapper {
 			margin: -15px;
+			flex-wrap: wrap;
 		}
 		#publicUserBox {
 			.avatar {
@@ -1131,7 +1222,7 @@ nav {
 				font-weight: bold;
 				margin-bottom: 0;
 			}
-			width: 25%;
+			width: 22.6%;
 			border: 1px solid $active-tab-background;
 			border-radius: 8px;
 			margin: 15px;
