--- a/src/App.scss
+++ b/src/App.scss
@@ -601,7 +601,8 @@ nav {
 	opacity: 0.75;
 }
 
-.publicationModal {
+.publicationModal,
+.editProfileModal {
 	.modal-content {
 		border-radius: 8px;
 		border: none;
@@ -610,29 +611,67 @@ nav {
 		border-bottom: none;
 		padding-bottom: 0;
 	}
-	.modal-body ul {
-		margin: -8px;
-		padding: 0 0 1rem 0;
-		list-style: none;
-	}
-	.modal-body ul li {
-		margin: 8px;
-		border: 1px solid black;
-		border-radius: 6px;
-		padding: 10px;
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
-	}
-	.modal-body h3 {
-		font-size: 20px;
-		margin: 0 0 2px 0;
-	}
-	.modal-body p {
-		margin: 0;
-	}
-	.modal-body a {
-		float: right;
+	.modal-body {
+		ul {
+			margin: -8px;
+			padding: 0 0 1rem 0;
+			list-style: none;
+		}
+		ul li {
+			margin: 8px;
+			border: 1px solid black;
+			border-radius: 6px;
+			padding: 10px;
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+		}
+		h3 {
+			font-size: 20px;
+			margin: 0 0 2px 0;
+		}
+		p {
+			margin: 0;
+		}
+		a {
+			float: right;
+		}
+		.user-editor {
+			margin: 0 30px;
+		}
+		.cover-picture {
+			height: 200px;
+			background-size: cover;
+			background-position: center center;
+			background-repeat: no-repeat;
+			border-radius: 8px;
+			position: relative;
+		}
+		.user-avatar {
+			margin-top: -65px;
+			.input-avatar-user {
+				display: none;
+			}
+			.avatar {
+				border: 5px solid $white-text;
+				position: relative;
+				cursor: pointer;
+				img {
+					width: 120px;
+					height: auto;
+					cursor: pointer;
+				}
+				.avatar-overlay {
+					position: absolute;
+					background: rgba(0, 0, 0, 0.4);
+					width: 100%;
+					height: 100%;
+					display: flex;
+					align-items: center;
+					justify-content: center;
+				}
+			}
+		}
 	}
 }
 
@@ -1166,6 +1205,32 @@ nav {
 			margin-bottom: 20px;
 			background-size: 100%;
 			background-position: center center;
+			position: relative;
+			.edit-cover {
+				input {
+					display: none;
+				}
+
+				display: flex;
+				align-items: center;
+				padding: 5px 10px;
+				position: absolute;
+				right: 20px;
+				top: 20px;
+				color: $white-text !important;
+				transition: 0.3s;
+				border-radius: 8px;
+				border: 1px solid $dark-button-color;
+				backdrop-filter: blur(8px);
+				-webkit-backdrop-filter: blur(8px);
+				margin-bottom: 0;
+				svg {
+					margin-right: 8px;
+				}
+			}
+			.edit-cover:hover {
+				background-color: rgba(255, 255, 255, 0.2);
+			}
 		}
 		.filter-bar {
 			display: flex;
