--- a/src/App.scss
+++ b/src/App.scss
@@ -92,12 +92,14 @@ button,
 	border: none !important;
 	background-color: $input-background !important;
 	box-shadow: inset 0 0 0 3px $input-focus-border !important;
-	border-radius: 8px;
 }
 
-button:focus {
+button:focus,
+.btn.focus,
+.btn:focus {
 	outline: none !important;
 	border: none !important;
+	box-shadow: none !important;
 }
 
 form .form-label {
@@ -106,7 +108,7 @@ form .form-label {
 }
 form .form-control {
 	border: none;
-	background-color: $input-background !important;
+	background-color: $input-background;
 	color: $input-text;
 }
 form .form-control::placeholder {
@@ -323,7 +325,7 @@ nav {
 /*---HERO STYLES---*/
 
 #hero {
-	padding: 70px 120px 150px 195px !important;
+	padding: 70px 0 100px 0;
 	background-size: cover !important;
 	background-position: center center !important;
 	background-repeat: no-repeat !important;
@@ -343,65 +345,105 @@ nav {
 		color: white;
 		text-shadow: 1px 2px 3px rgba(0, 0, 0, 0.8);
 	}
-	.header-form {
-		background-color: #ffffff;
-		border-radius: 10px;
-		margin-top: 40px;
+	.search-form {
+		margin-top: 25px;
+		border-radius: 8px;
+		background-color: rgba(188, 206, 240, 0.397);
+		padding: 15px;
+		backdrop-filter: blur(15px);
+		.tab-bar {
+			ul {
+				list-style: none;
+				margin: 0;
+				padding: 0;
+				display: flex;
+				align-items: center;
+			}
+			button {
+				color: $white-text;
+				padding: 6px 25px;
+				font-weight: bold;
+			}
+			button.active {
+				background: $white-text;
+				color: $dark-text;
+			}
+		}
 	}
 	.header-form .form-group {
 		position: relative;
 		flex: 1;
-		margin: 0;
+		margin: 10px 10px 0 0;
 	}
-	.header-form label {
+	.header-form .input-label {
 		position: absolute;
 		top: 12px;
-		left: 35px;
+		left: 15px;
 		font-size: 0.8em;
 		font-weight: bold;
 		margin-bottom: 0;
+		z-index: 100;
 	}
 	.header-form .form-control {
 		font-size: 1.1em;
 		letter-spacing: 0.5px;
-		padding: 32px 35px 12px 35px;
+		padding: 32px 15px 12px 15px;
 		height: auto;
 		border: none;
+		background-color: $white-text;
+		color: $dark-text;
+		text-align: left;
 	}
 	.header-form .form-control:focus {
 		background-color: rgba(0, 0, 0, 0.05);
 	}
-	.header-form---sep {
-		display: block;
-		border-right: 0.5px solid rgba(0, 0, 0, 0.3);
-		height: 35px;
-		margin: 0 8px;
+	.header-form .dropdown .dropdown-toggle {
+		width: 100%;
+		display: flex;
+		align-items: center;
+		margin: 0;
+		border: none;
+		padding: 0;
+	}
+	.header-form .dropdown .dropdown-toggle::after {
+		content: none;
+	}
+	.header-form .dropdown .dropdown-menu {
+		width: 100%;
+		padding: 0;
+		.pac-item {
+			display: flex;
+			align-items: center;
+			padding: 0 15px !important;
+		}
+		.form-check-input {
+			margin: 0;
+			width: 18px;
+			height: 18px;
+			display: block;
+			position: relative;
+		}
+		.pac-item label {
+			margin-left: 30px;
+			font-size: 1.3em;
+			color: $dark-text;
+			height: 100%;
+			width: 100%;
+			padding: 10px 15px;
+			margin: 0;
+			cursor: pointer;
+		}
 	}
 	.form-group.header-form---submit {
 		flex: 0;
-		padding: 0 10px 0 0;
-		margin-left: 20px;
+		margin: auto 0 0 0;
 	}
-	.form-group .btn {
+	.form-group .button-submit {
 		font-weight: bold;
-		padding: 13px 15px;
+		padding: 23px 15px;
 		min-width: 52px;
 		display: flex;
-	}
-	.header-indicator {
-		color: #ffffff;
-		position: absolute;
-		bottom: 25px;
-		text-shadow: 1px 2px 3px rgba(0, 0, 0, 0.8);
-	}
-	.header-indicator p {
-		margin: 0 0 0 7px;
-	}
-	.header-indicator a {
-		color: #ffffff;
-	}
-	.header-indicator svg {
-		filter: drop-shadow(1px 2px 3px rgba(0, 0, 0, 0.8));
+		border: none;
 	}
 }
 
