--- a/src/App.scss
+++ b/src/App.scss
@@ -22,6 +22,10 @@ $hover-tab-background: #eaf0fc;
 	max-width: 1600px;
 }
 
+.mw-1200 {
+	max-width: 1200px;
+}
+
 .avatar {
 	border-radius: 100px;
 	margin-right: 12px;
