--- a/src/App.scss
+++ b/src/App.scss
@@ -328,126 +328,181 @@ nav {
 /*---TOP NAV---*/
 /*---HERO STYLES---*/
 
-#hero {
-	padding: 70px 0 100px 0;
-	background-size: cover !important;
-	background-position: center center !important;
-	background-repeat: no-repeat !important;
-	position: relative;
-	.header-title {
-		font-size: 3rem;
-		max-width: 550px;
-		line-height: 1;
-		color: white;
-		text-shadow: 1px 2px 3px rgba(0, 0, 0, 0.5);
-	}
-	.header-subtitle {
-		font-size: 1.5rem;
-		max-width: 470px;
-		margin-top: 20px;
-		line-height: 1.3;
-		color: white;
-		text-shadow: 1px 2px 3px rgba(0, 0, 0, 0.8);
-	}
-	.search-form {
-		margin-top: 25px;
-		border-radius: 8px;
-		background-color: rgba(188, 206, 240, 0.397);
-		padding: 15px;
-		backdrop-filter: blur(15px);
-		.tab-bar {
-			ul {
-				list-style: none;
-				margin: 0;
-				padding: 0;
-				display: flex;
-				align-items: center;
-			}
-			button {
-				color: $white-text;
-				padding: 6px 25px;
-				font-weight: bold;
-			}
-			button.active {
-				background: $white-text;
-				color: $dark-text;
+#homepage {
+	#hero {
+		padding: 70px 0 100px 0;
+		background-size: cover !important;
+		background-position: center center !important;
+		background-repeat: no-repeat !important;
+		position: relative;
+		.header-title {
+			font-size: 3rem;
+			max-width: 550px;
+			line-height: 1;
+			color: white;
+			text-shadow: 1px 2px 3px rgba(0, 0, 0, 0.5);
+		}
+		.header-subtitle {
+			font-size: 1.5rem;
+			max-width: 470px;
+			margin-top: 20px;
+			line-height: 1.3;
+			color: white;
+			text-shadow: 1px 2px 3px rgba(0, 0, 0, 0.8);
+		}
+		.search-form {
+			margin-top: 25px;
+			border-radius: 8px;
+			background-color: rgba(188, 206, 240, 0.397);
+			padding: 15px;
+			backdrop-filter: blur(15px);
+			.tab-bar {
+				ul {
+					list-style: none;
+					margin: 0;
+					padding: 0;
+					display: flex;
+					align-items: center;
+				}
+				button {
+					color: $white-text;
+					padding: 6px 25px;
+					font-weight: bold;
+				}
+				button.active {
+					background: $white-text;
+					color: $dark-text;
+				}
 			}
 		}
-	}
-	.header-form .form-group {
-		position: relative;
-		flex: 1;
-		margin: 10px 10px 0 0;
-	}
-	.header-form .input-label {
-		position: absolute;
-		top: 12px;
-		left: 15px;
-		font-size: 0.8em;
-		font-weight: bold;
-		margin-bottom: 0;
-		z-index: 100;
-	}
-	.header-form .form-control {
-		font-size: 1.1em;
-		letter-spacing: 0.5px;
-		padding: 32px 15px 12px 15px;
-		height: auto;
-		border: none;
-		background-color: $white-text;
-		color: $dark-text;
-		text-align: left;
-	}
-	.header-form .form-control:focus {
-		background-color: rgba(0, 0, 0, 0.05);
-	}
-	.header-form .dropdown .dropdown-toggle {
-		width: 100%;
-		display: flex;
-		align-items: center;
-		margin: 0;
-		border: none;
-		padding: 0;
-	}
-	.header-form .dropdown .dropdown-toggle::after {
-		content: none;
-	}
-	.header-form .dropdown .dropdown-menu {
-		width: 100%;
-		padding: 0;
-		.pac-item {
+		.header-form .form-group {
+			position: relative;
+			flex: 1;
+			margin: 10px 10px 0 0;
+		}
+		.header-form .input-label {
+			position: absolute;
+			top: 12px;
+			left: 15px;
+			font-size: 0.8em;
+			font-weight: bold;
+			margin-bottom: 0;
+			z-index: 100;
+		}
+		.header-form .form-control {
+			font-size: 1.1em;
+			letter-spacing: 0.5px;
+			padding: 32px 15px 12px 15px;
+			height: auto;
+			border: none;
+			background-color: $white-text;
+			color: $dark-text;
+			text-align: left;
+		}
+		.header-form .form-control:focus {
+			background-color: rgba(0, 0, 0, 0.05);
+		}
+		.header-form .dropdown .dropdown-toggle {
+			width: 100%;
 			display: flex;
 			align-items: center;
-			padding: 0 15px !important;
-		}
-		.form-check-input {
 			margin: 0;
-			width: 18px;
-			height: 18px;
-			display: block;
-			position: relative;
+			border: none;
+			padding: 0;
 		}
-		.pac-item label {
-			margin-left: 30px;
-			font-size: 1.3em;
-			color: $dark-text;
-			height: 100%;
+		.header-form .dropdown .dropdown-toggle::after {
+			content: none;
+		}
+		.header-form .dropdown .dropdown-menu {
 			width: 100%;
-			padding: 10px 15px;
-			margin: 0;
-			cursor: pointer;
+			padding: 0;
+			.pac-item {
+				display: flex;
+				align-items: center;
+				padding: 0 15px !important;
+			}
+			.form-check-input {
+				margin: 0;
+				width: 18px;
+				height: 18px;
+				display: block;
+				position: relative;
+			}
+			.pac-item label {
+				margin-left: 30px;
+				font-size: 1.3em;
+				color: $dark-text;
+				height: 100%;
+				width: 100%;
+				padding: 10px 15px;
+				margin: 0;
+				cursor: pointer;
+			}
+		}
+		.form-group.header-form---submit {
+			flex: 0;
+			margin: auto 0 0 0;
+		}
+		.form-group .button-submit {
+			font-weight: bold;
+			padding: 23px 15px;
+			min-width: 52px;
+			display: flex;
+			border: none;
 		}
 	}
-	.form-group.header-form---submit {
-		flex: 0;
-		margin: auto 0 0 0;
+	.homepage-section {
+		padding: 60px 0;
+		.section-listings {
+			margin-top: 20px;
+		}
 	}
-	.form-group .button-submit {
-		font-weight: bold;
-		padding: 23px 15px;
-		min-width: 52px;
+}
+
+#footer {
+	padding: 60px 0;
+	border-top: 1px solid $hover-tab-background;
+	.footer-intro {
 		display: flex;
-		border: none;
+		flex-flow: column nowrap;
+		align-items: flex-start;
+		.footer-logo {
+			margin-bottom: 12px;
+		}
+		.footer-copyright-timestamp {
+			opacity: 0.5;
+			font-size: 0.8em;
+			display: block;
+			margin-top: 15px;
+		}
+	}
+	.footer-header {
+		font-family: "INTER";
+		font-size: 1.2em;
+		font-weight: bold;
+		margin-bottom: 20px;
+	}
+	ul {
+		list-style: none;
+		margin: 0;
+		padding: 0;
+		li {
+			padding: 2px 0;
+			a {
+				color: $dark-text;
+				transition: 0.3s;
+				svg {
+					margin-right: 8px;
+				}
+			}
+			a:hover {
+				color: $soft-text;
+				svg {
+					stroke: $soft-text;
+					transition: 0.3s;
+				}
+			}
+		}
 	}
 }
 
@@ -1661,3 +1716,51 @@ nav {
 }
 
 /*---END BOOKMARKS LIST STYLES---*/
+/*---PUBLIC SQUARE BOX LISTING STYLES---*/
+
+#listingSquareBox {
+	width: 25%;
+	.listing-box-wrapper {
+		overflow: hidden;
+		display: flex;
+		flex-flow: column nowrap;
+		.listing-cover {
+			border-radius: 8px;
+			height: 150px;
+			background-size: cover;
+			background-position: center center;
+			background-repeat: no-repeat;
+		}
+		.listing-rating-wrapper {
+			margin: 5px 0;
+			display: flex;
+			align-items: center;
+			svg {
+				margin-right: 3px;
+			}
+			.listing-rating {
+				font-size: 0.8em;
+				font-weight: bold;
+			}
+		}
+		.listing-title {
+			font-family: "INTER";
+			font-size: 1.05em;
+			font-weight: bold;
+			margin-bottom: 3px;
+		}
+		.listing-subtitle {
+			font-size: 0.95em;
+			line-height: 1.2em;
+			opacity: 0.7;
+			margin-bottom: 3px;
+		}
+		.listing-location {
+			text-transform: uppercase;
+			font-size: 0.7em;
+			letter-spacing: 1px;
+		}
+	}
+}
+
+/*---END PUBLIC SQUARE BOX LISTING STYLES---*/
