--- a/src/App.scss
+++ b/src/App.scss
@@ -336,16 +336,16 @@ nav {
 		background-repeat: no-repeat !important;
 		position: relative;
 		.header-title {
-			font-size: 3rem;
-			max-width: 550px;
-			line-height: 1;
+			font-size: 2.6rem;
+			max-width: 750px;
+			line-height: 1.2em;
 			color: white;
 			text-shadow: 1px 2px 3px rgba(0, 0, 0, 0.5);
 		}
 		.header-subtitle {
 			font-size: 1.5rem;
-			max-width: 470px;
-			margin-top: 20px;
+			max-width: 650px;
+			margin-top: 10px;
 			line-height: 1.3;
 			color: white;
 			text-shadow: 1px 2px 3px rgba(0, 0, 0, 0.8);
