--- a/src/App.scss
+++ b/src/App.scss
@@ -485,6 +485,9 @@ nav {
 			}
 		}
 	}
+	.homepage-section:last-child {
+		padding-bottom: 60px;
+	}
 
 	.header-form.places .dropdown .dropdown-toggle .form-control {
 		max-width: 313.56px !important;
