updated searchbox styles

--- a/src/App.scss
+++ b/src/App.scss
@@ -423,7 +423,7 @@ nav {
 			.form-control {
 				overflow-x: scroll;
 				max-height: 70px;
-				max-width: 475.45px;
+				max-width: 28.73em;
 				min-height: 90px;
 				position: relative;
 				top: 10px;
@@ -490,7 +490,7 @@ nav {
 	}
 
 	.header-form.places .dropdown .dropdown-toggle .form-control {
-		max-width: 313.56px !important;
+		max-width: 19em !important;
 	}
 }
 
