--- a/src/App.scss
+++ b/src/App.scss
@@ -504,6 +504,8 @@ nav {
 		align-items: flex-start;
 		.footer-logo {
 			margin-bottom: 12px;
+			width: 135px;
+			height: auto;
 		}
 		.footer-copyright-timestamp {
 			opacity: 0.5;
@@ -882,47 +884,6 @@ nav {
 		background-color: #eaf0fc !important;
 		box-shadow: inset 0 0 0 3px #2e6ae4 !important;
 	}
-	.progress-bar-outter {
-		position: sticky;
-		bottom: 0;
-		background: $white-text;
-		border-top: 1px solid rgb(232, 232, 232);
-		padding: 15px 0;
-		.buttons button:last-child {
-			background-color: $dark-button-background;
-			color: $dark-button-color;
-			padding: 12px 15px;
-			min-width: 160px;
-			font-weight: bold;
-		}
-		.buttons button:disabled {
-			opacity: 1;
-			background-color: $active-tab-background;
-			cursor: not-allowed;
-		}
-		.col {
-			padding: 0;
-		}
-		.col.left {
-			max-width: 13%;
-		}
-		.col.right {
-			max-width: 30%;
-		}
-		span {
-			color: $input-text;
-			opacity: 0.6;
-		}
-		.progress {
-			background-color: $hover-tab-background;
-			border-radius: 100px;
-			height: 0.8rem;
-		}
-		.progress-bar {
-			background-color: $dark-button-background;
-			border-radius: 100px;
-		}
-	}
 }
 
 .pac-container {
@@ -951,6 +912,51 @@ nav {
 }
 
 /*---COMPOSER STYLES---*/
+/*---PROGRESS BAR STYLES---*/
+
+.progress-bar-outter {
+	position: sticky;
+	bottom: 0;
+	background: $white-text;
+	border-top: 1px solid rgb(232, 232, 232);
+	padding: 15px 0;
+	.buttons button:last-child {
+		background-color: $dark-button-background;
+		color: $dark-button-color;
+		padding: 12px 15px;
+		min-width: 160px;
+		font-weight: bold;
+	}
+	.buttons button:disabled {
+		opacity: 1;
+		background-color: $active-tab-background;
+		cursor: not-allowed;
+	}
+	.col {
+		padding: 0;
+	}
+	.col.left {
+		max-width: 13%;
+	}
+	.col.right {
+		max-width: 30%;
+	}
+	span {
+		color: $input-text;
+		opacity: 0.6;
+	}
+	.progress {
+		background-color: $hover-tab-background;
+		border-radius: 100px;
+		height: 0.8rem;
+	}
+	.progress-bar {
+		background-color: $dark-button-background;
+		border-radius: 100px;
+	}
+}
+
+/*---PROGRESS BAR STYLES---*/
 /*---TOAST STYLES---*/
 
 .toast.show {
@@ -1392,10 +1398,13 @@ nav {
 			}
 			.avatar {
 				margin-right: 0;
+				width: 75px;
+				height: 75px;
+				overflow: hidden;
 				img {
 					border-radius: 100px;
 					width: 75px;
-					height: 75px;
+					height: auto;
 				}
 			}
 			.listing-owner-name {
@@ -1655,6 +1664,21 @@ nav {
 				margin-bottom: 0;
 			}
 		}
+		.box.empty {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			flex-flow: column;
+			text-align: center;
+			.media img {
+				width: 280px;
+				height: auto;
+				margin-bottom: 25px;
+			}
+			.profile-owner-name {
+				font-weight: bold;
+			}
+		}
 	}
 }
 
@@ -1805,3 +1829,87 @@ nav {
 }
 
 /*---END PUBLIC SQUARE BOX LISTING STYLES---*/
+/*---SEARCH PAGE---*/
+
+#searchPage {
+	.box {
+		width: 100%;
+		padding: 20px 0;
+	}
+	.box .col.left,
+	.box .col.right {
+		max-width: 20% !important;
+	}
+	.box .col.center {
+		.top-nav-wrapper .top-nav-subtitle {
+			max-width: 100%;
+			span {
+				font-weight: bold;
+			}
+		}
+	}
+	.box.empty {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		flex-flow: column;
+		text-align: center;
+		margin-top: 40px;
+		.media img {
+			width: 280px;
+			height: auto;
+			margin-bottom: 25px;
+		}
+		.profile-owner-name {
+			font-weight: bold;
+		}
+	}
+}
+
+/*---END SEARCH PAGE---*/
+/*---COMPLETE REGISTRATION PAGE---*/
+
+#completeAccountPage {
+	.box {
+		width: 100%;
+		padding: 20px 0;
+	}
+	.box .col.left,
+	.box .col.right {
+		max-width: 20% !important;
+	}
+	.box .col.center {
+		.top-nav-wrapper .top-nav-subtitle {
+			max-width: 100%;
+			span {
+				font-weight: bold;
+			}
+		}
+		.selection-box {
+			padding: 30px 0;
+			display: flex;
+			align-items: center;
+			flex-wrap: wrap;
+			margin: -6px;
+			.form-check {
+				padding: 5px 12px;
+				background: $hover-tab-background;
+				border-radius: 8px;
+				margin: 6px;
+				color: $dark-text;
+				display: flex;
+				align-items: center;
+				.form-check-input {
+					margin: 0;
+					width: 18px;
+					height: 18px;
+				}
+				.form-check-label {
+					padding-left: 27px;
+				}
+			}
+		}
+	}
+}
+
+/*---END COMPLETE REGISTRATION PAGE---*/
