--- a/src/App.scss
+++ b/src/App.scss
@@ -774,12 +774,13 @@ nav {
 	opacity: 0.75;
 }
 
+.modal-content {
+	border-radius: 8px;
+	border: none;
+}
+
 .publicationModal,
 .editProfileModal {
-	.modal-content {
-		border-radius: 8px;
-		border: none;
-	}
 	.modal-header {
 		border-bottom: none;
 		padding-bottom: 0;
@@ -844,6 +845,34 @@ nav {
 					justify-content: center;
 				}
 			}
+		}
+	}
+}
+
+.signUpModal {
+	.body-wrapper {
+		display: flex;
+		align-items: center;
+		flex-direction: column;
+		img {
+			width: 300px;
+			height: auto;
+		}
+		.modal-title {
+			font-size: 2.2em;
+			margin-top: 30px;
+		}
+		.modal-subtitle {
+			font-size: 1.2em;
+			text-align: center;
+			max-width: 400px;
+		}
+	}
+	.modal-body {
+		padding: 3rem;
+		.btn {
+			margin-top: 20px;
+			padding: 12px 55px;
 		}
 	}
 }
